--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mordecai-dashboard",
+  "name": "openclaw-agent-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
